gap issue fixed 2

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -68,6 +68,6 @@
 @media (max-width: 1023px) {
     .about {
         min-height: auto;
-        padding: 80px 24px;
+        padding: 50px 24px;
     }
 }
