--- a/src/pages/Hero.css
+++ b/src/pages/Hero.css
@@ -68,6 +68,7 @@
 
 @media (max-width: 1023px) {
   .hero {
-    min-height: 80vh;
+    min-height: 600px;
+    height: 600px;
   }
 }
