--- a/src/pages/WhyBikeDex.css
+++ b/src/pages/WhyBikeDex.css
@@ -60,7 +60,7 @@
 @media (max-width: 1023px) {
     .whybikedex {
         min-height: auto;
-        padding: 80px 24px;
+        padding: 50px 24px;
         box-sizing: border-box;
     }
 }
